--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@ body{
 }
 
 
+
+
 /* .App {
   text-align: center;
 } */
@@ -113,7 +115,7 @@ margin-right: 50em;
   font-weight: 600;
 }
 .navbar .logo a span{
-  color: gray;
+  color: crimson;
 }
 .navbar li{
   list-style: none;
@@ -170,8 +172,9 @@ li .link:hover{
 }
 
 .header-title button{
-  background: black;
+  background: crimson;
   border: 0px;
+  border-radius: 6px;
   padding: 1em 3em;
   transition: all 0.2s ease-out;
   -webkit-transition: all 0.2s ease-out;
