--- a/src/App.css
+++ b/src/App.css
@@ -105,8 +105,9 @@ margin-right: 50em;
 }
 
 .navbar.sticky{
-  z-index:100;
-  margin-top: -25px;
+  /* z-index:100; */
+  /* margin-top: -25px; */
+  height: 140px;
   background: blue;
 }
 .navbar .max-width{
