--- a/src/App.css
+++ b/src/App.css
@@ -59,14 +59,17 @@ margin-right: 50em;
 }
 
 .img{
-  background-image: url("./images/main.jpg");
+  display: flex;
+  background-image: url("./images/main.jpg") ;
    /* width: 100%;
    height: 900px; */
-   height: 120vh;
+   height: 120vh;   
    background-size: cover;
-   z-index:2;
+   background-attachment: fixed;
+   min-height: 500px;
+   /* z-index:2;
    margin-top: -70px;
-   padding-bottom: 100px;
+   padding-bottom: 100px; */
  
     }
 
@@ -91,9 +94,10 @@ margin-right: 50em;
  } */
  
 .max-width{
-  max-width: 1300px;
+  /* max-width: 1300px; */
   padding: 80px;
-  margin: auto;
+  /* margin: auto; */
+  margin: auto 0 auto 40px;
 }
 .navbar{
   position:fixed;
@@ -167,6 +171,7 @@ nav li .link{
   -ms-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
 }
+
 li .link:hover{
   opacity: 1;
 } 
